<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="_12_2_afternoon">12-2\nafternoon</string>
    <string name="_3_5_evening">3-5\nevening</string>
    <string name="_9_11_morning">9-11\nmorning</string>
    <string name="more_about">About Al Baraka</string>
    <string name="About_us">About us</string>
    <string name="Account_Name">Account name</string>
    <string name="Account_Number">Account number</string>
    <string name="pdf_account_number">Account number: %1$s</string>
    <string name="app_name">alBaraka</string>
    <string name="Amount">Amount</string>
    <string name="error_occurred">An error occurred!</string>
    <string name="new_user">New Client? Open Your Digital Account Now</string>
    <string name="subscribe">alBaraka Customer and don\'t have an app account ? Signup here</string>
    <string name="Apply">Apply</string>
    <string name="Arabic">Arabic</string>
    <string name="logout_confirmation">Are you sure you want to log out?</string>
    <string name="ATM">ATM</string>
    <string name="Bank_AlBaraka_Bank_Statement_List">Bank AlBaraka - Bank Statement List</string>
    <string name="biometric_id">Biometric ID</string>
    <string name="prompt_info_title">Biometric login for alBaraka</string>
    <string name="buying_rate">Buying rate</string>
    <string name="prompt_info_cancel">Cancel</string>
    <string name="Change_language">Change language</string>
    <string name="password_title">Change password</string>
    <string name="my_devices">Linked Devices</string>
    <string name="loyalty_points">Loyalty Points</string>
    <string name="transaction_description">Transaction Description</string>
    <string name="points">Points</string>
    <string name="transaction_history">Transaction History</string>
    <string name="available_points">Available Points</string>
    <string name="loyalty_points_screen">🎁 Loyalty Points</string>
    <string name="more_pass">Forget Password</string>
    <string name="pin_title">Change PIN code</string>
    <string name="cif_number">Account Number</string>
    <string name="client">Client</string>
    <string name="code">Code</string>
    <string name="guest_complaints">Complaints</string>
    <string name="more_complaints">Complaints and suggestions</string>
    <string name="more_mobile_form">Request to subscribe to Al Baraka application</string>
    <string name="more_mobile_form2">Request to subscribe to ATM</string>
    <string name="more_resetpassfprm_form">Request Reset Password</string>
    <string name="error_connection">Connection error!</string>
    <string name="contact_information">Contact information</string>
    <string name="Contact_us">Contact us</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="create_account">Create Al Baraka digital account</string>
    <string name="currency">Currency</string>
    <string name="Currency_calculator">Currency calculator</string>
    <string name="current_or_potential_client">Current or potential client</string>
    <string name="password_current">Current password</string>
    <string name="pin_current">Current PIN code</string>
    <string name="Date">Date</string>
    <string name="pdf_date">Date %1$s</string>
    <string name="date_of_incident">Date of incident</string>
    <string name="date_of_job">Date of Job</string>
    <string name="transfer_Description">Reason</string>
    <string name="details_of_the_complaints_or_suggestion">Details of the complaints or suggestion</string>
    <string name="biometric_confirmation">Do you want to enable your phone\'s biometric authentication?</string>
    <string name="home_menu_payments">E-payment</string>
    <string name="email">Email</string>
    <string name="my_bills">My Payments</string>
    <string name="result_of_inquiry">Result of inquiry</string>
    <string name="pay_selected_bills">Pay selected bills</string>
    <string name="max_pay_amount">Automatic payment maximum amount</string>
    <string name="choose_account">Choose your default payment account</string>
    <string name="my_bills_txt">Bill payments made from your account at Al Baraka Bank</string>
    <string name="English">English</string>
    <string name="Exchange">Exchange</string>
    <string name="guest_rate">Exchange rate</string>
    <string name="first_name">First Name</string>
    <string name="bank_name">Bank Name</string>
    <string name="eng_name">Engagement Type</string>
    <string name="additional_income_details_txt">Additional income details </string>
    <string name="first_nameHF">Beneficiary First Name</string>
    <string name="seconde_nameHF">Beneficiary Father Name</string>
    <string name="last_nameHF">Beneficiary Last Name</string>
    <string name="From">From</string>
    <string name="from_account">From %1$s</string>
    <string name="home_menu_main">Home</string>
    <string name="Invite_Friends">Invite Friends</string>
    <string name="guest_intro">Join us to learn more about\nthe bank and the services we offer</string>
    <string name="last_name">Last Name</string>
    <string name="home_last_seen">Last seen</string>
    <string name="last_update">last update</string>
    <string name="loading">Loading..</string>
    <string name="guest_locations">Locations</string>
    <string name="Logging_in_to_access_password">Logging in to access password</string>
    <string name="login">Login</string>
    <string name="logout_title">Logout</string>
    <string name="logout_title2">Are you sure ?</string>
    <string name="delete_title">Delete Bill</string>
    <string name="bill_search_title">Get Bill info</string>
    <string name="mini_statement">Account Statement</string>
    <string name="mobile_number">Mobile number</string>
    <string name="basic_salary">Net monthly income</string>
    <string name="additional_salary_txt">Additional income value</string>
    <string name="engagment_value_txt">Engagement value</string>
    <string name="monthly_pay">Monthly Payment</string>
    <string name="mobile_number_moform">Mobile number</string>
    <string name="mobile_number_resetform">The mobile number submitted in the banking system - *********09</string>
    <string name="home_menu_more">More</string>
    <string name="home_menu_accounts">My accounts</string>
    <string name="sep_profile">Profile</string>
    <string name="my_transactions">My Transactions</string>
    <string name="Name">Name</string>
    <string name="thirdName">Beneficiary Full Name</string>
    <string name="phone_number_hf">Beneficiary Phone Number</string>
    <string name="password_new">New password</string>
    <string name="password_confirmation">New password confirmation</string>
    <string name="pin_new">New PIN code</string>
    <string name="pin_confirmation">New PIN code confirmation</string>
    <string name="No">No</string>
    <string name="not_a_client">Not a client</string>
    <string name="Notifications">Notifications</string>
    <string name="action_ok">OK</string>
    <string name="login_using_finger_print">or login using fingerprint</string>
    <string name="password">Password</string>
    <string name="personal_information">Personal information</string>
    <string name="place_of_incident">Place of incident</string>
    <string name="login_error_required">Please enter CIF number and password</string>
    <string name="code_error">Please enter the code</string>
    <string name="error_fields_required">Please fill all required fields</string>
    <string name="please_provide_your_cif_number">Please provide your CIF number</string>
    <string name="enter_your_info">Please provide your details</string>
    <string name="code_msg">Please use the code sent to you by SMS</string>
    <string name="please_wait">Please wait…</string>
    <string name="more_services">Products and services</string>
    <string name="home_recent_transactions">last Transaction</string>
    <string name="resend">Resend code</string>
    <string name="action_save">Save</string>
    <string name="search">Search</string>
    <string name="home_see_all">See all</string>
    <string name="selling_rate">Selling rate</string>
    <string name="send">Send</string>
    <string name="guest_services">Services</string>
    <string name="login_skip">Skip (to browse our services)</string>
    <string name="Sound_effect">Sound effect</string>
    <string name="submit">Submit</string>
    <string name="SYP">SYP</string>
    <string name="telephone_number">Telephone number</string>
    <string name="Tell_a_friend_about_us">Tell a friend about us</string>
    <string name="the_appropriate_contact_time">The appropriate contact time</string>
    <string name="password_error_wrong">The current password is wrong!</string>
    <string name="password_error_match">The new password doesn\'t match the password confirmation</string>
    <string name="password_error_length">The new password should be at least 6 character</string>
    <string name="password_validation_error">The new password should contain at least one number and one Upper character, and one Lower character, and one special characters, and one .</string>
    <string name="pin_error_match">The new PIN code doesn\'t match the PIN code confirmation</string>
    <string name="pin_error_length">The PIN code should be 4 digits</string>
    <string name="There_is_no_biometric_record_saved_for_the_entered">There is no biometric record saved for the entered CIF, please log in with password</string>
    <string name="error_required">This field is required!</string>
    <string name="title_of_the_message">Title of the message</string>
    <string name="To">To</string>
    <string name="to_account">To %1$s</string>
    <string name="Total">Total</string>
    <string name="Total2">Total Price</string>
    <string name="Total3">Downpayment</string>
    <string name="Total4">Amount of Financing required</string>
    <string name="Total5">Approximate monthly installment</string>
    <string name="Touch_ID">Touch ID</string>
    <string name="transfer">Transfer</string>
    <string name="no_satelment">Paid installments</string>
    <string name="no_rest_satelment">remaining premiums</string>
    <string name="deposit_transfer_text">Your deposit transfer text here</string>
    <string name="deposit_transfers">Deposit Transfers</string>
    <string name="all_installment">Show all installments</string>
    <string name="all_installment_subs">View due and unpaid installments</string>
    <string name="all_installment_subs_st">Due and unpaid installments with the remaining portion if it is partially due</string>
    <string name="withdraw_transfer_text">Your withdraw transfer text here</string>
    <string name="all_installment_subs_ft">Show all paid and unpaid installments</string>
    <string name="withdraw_transfers">Withdraw Transfers</string>
    <string name="value_satelment">The installment</string>
    <string name="value_rest_satelment">remaining commitment</string>
    <string name="Transfer_details">Transfer details</string>
    <string name="type_your_message_here">Type your message here</string>
    <string name="verification">Verification</string>
    <string name="version_number">Version Number</string>
    <string name="home_welcome_with_name">Welcome %1$s</string>
    <string name="home_welcome">Welcome back!</string>
    <string name="login_welcome">Welcome!</string>
    <string name="Yes">Yes</string>
    <string name="search_sep_msg">Are you sure you want to get info of this bill?</string>
    <string name="biller_print">Biller: </string>
    <string name="service_provider_print">Service ID: </string>
    <string name="paid_date_print">Payment Date: </string>
    <string name="paid_amount_print">Amount Paid: </string>
    <string name="profits_and_deposit_calculate">Profits calculator</string>
    <string name="financing">Financing</string>
    <string name="order_atm_card">Order an ATM card</string>
</resources>