<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    card_view:cardCornerRadius="8dp"
    card_view:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <!-- Button on the left side -->


        <!-- Vertical LinearLayout for text views -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingStart="8dp"
            android:paddingLeft="8dp">

            <TextView
                android:id="@+id/tv_biller_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/biller_print"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"/>

            <TextView
                android:id="@+id/tv_billing_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service_provider_print"
                android:textSize="14sp"
                android:textColor="@android:color/black"/>

            <TextView
                android:id="@+id/tv_payment_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/paid_date_print"
                android:textSize="14sp"
                android:textColor="@android:color/darker_gray"/>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/tv_total_paid_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/paid_amount_print"
        android:textSize="14sp"
        android:textColor="@android:color/holo_green_dark"/>
    <TextView
        android:id="@+id/tv_total_paid_amount2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SYP"
        android:textSize="14sp"
        android:textColor="@android:color/holo_green_dark"/>
</LinearLayout>


        </LinearLayout>
        <Button
            android:id="@+id/btn_pdf"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@drawable/ic_pdf_file"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>

</androidx.cardview.widget.CardView>
